# ERRORQUAKE

./: .gitignore  CLAUDE.md  README.md  REPRODUCE.md  pyproject.toml
.github/workflows/: ci.yml
data/release/: croissant_metadata.json  datasheet.md
paper/: build_submission.ps1  checklist.tex  findings_log.md  main.tex  neurips_2026.sty  package_submission.ps1  references.bib  self_review.md  theorems.tex
prompts/query_generation/: bio.txt  cult.txt  fin.txt  geo.txt  (+5 more)
results/: evaluation_progress_v6.json
scripts/: apply_human_ratings.py  build_expanded_human_study.py  build_multi_rater_kit.py  build_overcall_report.py  build_v6_supplement.py  check_405b_availability.py  check_reasoning_models.py  count_abstract.py  env_paths.py  make_fig4.py  make_figures.py  resume_llama32.py  run_405b_eval.py  run_analysis.py  run_auto_verification.py  run_auto_verification_v2.py  run_calibration_refit.py  run_cross_domain_jackknife.py  run_deployment_table.py  run_evaluation.py  run_exceedance_sweep.py  run_exp1.py  run_exp2.py  run_exp2_robustness.py  run_exp3.py  run_exp3_diagnostic.py  run_exp4.py  run_exp5.py  run_exp7.py  run_extended_human_validation.py  run_family_native.py  run_flagged_replacements.py  run_full_human_reanalysis.py  run_generation.py  run_generation_prefetch.py  run_generation_watchdog.ps1  run_headline_robustness.py  run_human_validation_v8.py  run_icc.py  run_intervention_v2.py  (+42 more)
tests/: conftest.py  test_analyze.py  test_evaluate.py  test_generate.py  test_magnitude.py  test_queries.py  test_report.py  test_score.py  test_synthetic.py  test_utils.py
(+202 files in other folders)
