[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "errorquake"
version = "5.0.0"
description = "Magnitude-frequency analysis of LLM error severity"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.5",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "jsonlines>=4.0",
    "aiohttp>=3.9",
    "tenacity>=8.2",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "ruff>=0.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
